--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>IMRAN PORTFOLIO</title>
-  <link rel="icon" type="image/X-icon" href="images/portfolio.png">
+  <link rel="icon" type="image/X-icon" href="images\image.jpg">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <style>
     * {
