Updated with icon and some other stuff

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/X-icon" href="images/portfolio.png">
+    <link rel="icon" type="image/X-icon" href="images\image.jpg">
     <title>Imran.I - Contact</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
@@ -13,6 +13,7 @@
             --text: #2d2e32;
             --background: #f8f9fa;
             --shadow: 0 4px 12px rgba(0,0,0,0.08);
+font-family: 'Poppins', sans-serif;
         }
 
         nav {
@@ -188,13 +189,13 @@
                     <div class="info-card">
                         <i class="fas fa-envelope"></i>
                         <h3>Email</h3>
-                        <a href="mailto:iimraniimran4@gmail.com" target="_blank"> iimraniimran4@gmail.com</a>
+                        <a href="mailto:iimraniimran4@gmail.com" target="_blank" style="text-decoration: none; color: #000000;"> iimraniimran4@gmail.com</a>
                     </div>
 
                     <div class="info-card">
                         <i class="fas fa-phone"></i>
                         <h3>Phone</h3>
-                        <p>+91 7397677968</p>
+                        <a href="tel:7397677968" target="_blank" style="text-decoration: none; color: #000000;">+91 7397677968</a>
                     </div>
 
                     <div class="social-links">
