--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
     <div class="hero-content">
       <p class="small-heading">Hi, I'AM</p>
       <h1 class="big-heading">IMRAN.I</h1>
-      <h2 class="sub-heading">Front-end Developer</h2>
+      <h2 class="sub-heading">Front-End Developer</h2>
       <p class="hero-description">
         -I’m a passionate front-end developer skilled in React and Bootstrap. I’m currently expanding my skills to become a
         full stack developer, focusing on backend technologies.
