--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Imran.I - About</title>
-    <link rel="icon" type="image/X-icon" href="images/portfolio.png">
+    <link rel="icon" type="image/X-icon" href="images\image.jpg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
@@ -401,7 +401,7 @@ whatever I learn.
                                     JavaScript
                                 </span>
                                 <span class="tech-item">
-                                    <i class="fab fa-bootstrab"></i>
+                                    <i class="fa-brands fa-bootstrap"></i>
                                     Bootstrab
                                 </span>
                                 <span class="tech-item">
