--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/X-icon" href="images\image.jpg">
     <title>Imran.I - Contact</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         :root {
@@ -115,6 +116,7 @@ font-family: 'Poppins', sans-serif;
             display: flex;
             gap: 1.2rem;
             margin-top: 1.5rem;
+            
         }
 
         .social-links a {
@@ -123,6 +125,13 @@ font-family: 'Poppins', sans-serif;
         }
 
         .social-links a:hover { color: var(--primary); }
+
+        .social-links a i{
+            margin: 20px;
+            width: 10px;
+            height: 20px ;
+            padding: 10px;
+        }
 
         /* Contact Form */
         .contact-form {
@@ -200,10 +209,10 @@ font-family: 'Poppins', sans-serif;
 
                     <div class="social-links">
                         <a href="https://github.com/i-imran09" target="_blank">
-                            <i class="fab fa-github"></i>
+                            <i class="bi bi-github"></i>
                         </a>
                         <a href="https://www.linkedin.com/in/i-imran09/" target="_blank">
-                            <i class="fab fa-linkedin"></i>
+                            <i class="bi bi-linkedin"></i>
                         </a>
                     </div>
                 </div>
