--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         -I’m a passionate front-end developer skilled in React and Bootstrap. I’m currently expanding my skills to become a
         full stack developer, focusing on backend technologies.
       </p>
-      <a href="IMRAN.I_Front-End Developer_Resume" class="cta-button">
+      <a href="Resume\IMRAN.I_Front-End Developer_Resume.pdf" class="cta-button">
         <span>My Resume</span>
         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M5 12H19" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
